fixed menu button alignment issues

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -61,9 +61,9 @@ header {
 
   header .header_content .image_container {
     display: flex;
+    align-items: center;    
+    justify-content: flex-end;
     max-height: 100%;
-    width: 75%;
-    align-items: center;
     margin: 0.5rem 0.5rem 0.5rem 1rem;
   }
 
@@ -77,11 +77,13 @@ header {
   header .header_content .menu_container {
     display: flex;
     align-items: center;
-    height: 100%;
+    justify-content: flex-end;
+    max-height: 100%;
     flex-grow: 1;
     font-size: 2.25rem;
     color: rgba(22, 192, 186, 0.85);
-    padding: 1rem 1rem 0.5rem 0.5rem;
+    margin: 1rem 1rem 0.5rem 0.5rem;
+    border: 1px solid red;
   }
 
   header .header_content .menu_container i {
